# EduCrawler

./: .gitignore  .travis.yml  AUTHORS  LICENSE  README.md  config.yml  config_template.yml  ec  educrawler.py  requirements.txt  setup.cfg  setup.py
educrawler/: constants.py  crawler.py  utilities.py
scripts/: copy_ec.bash
src/educrawler/: __main__.py  constants.py  crawler.py  utilities.py
src/educrawler/modules/: constants.py  crawler.py  utilities.py
