[metadata]
name = EduCrawler
author = Tomas Lazauskas
summary = A command line experience for interacting with the Education section of portal.azure.com.
license = MIT
description-file = README.md
requires-python = >=3.6
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python
keywords =
    azure
    eduhub
scripts=[
        'ec',
    ],
[files]
packages_root = educrawler